Bug #53896
rados: 16.2.7 multiple gcc-12 compile errors
0%
Description
Fedora 36/rawhide
see https://kojipkgs.fedoraproject.org//work/tasks/945/81280945/build.log
...
[14/2059] /usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIC -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o -MF src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o.d -o src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/librados/snap_set_diff.cc
FAILED: src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o
/usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIC -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o -MF src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o.d -o src/CMakeFiles/rados_snap_set_diff_obj.dir/librados/snap_set_diff.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/librados/snap_set_diff.cc
In file included from /builddir/build/BUILD/ceph-16.2.7/src/include/rados/rados_types.hpp:10,
from /builddir/build/BUILD/ceph-16.2.7/src/librados/snap_set_diff.h:8,
from /builddir/build/BUILD/ceph-16.2.7/src/librados/snap_set_diff.cc:6:
/builddir/build/BUILD/ceph-16.2.7/src/include/rados/buffer.h:98:52: error: expected template-name before '<' token
98 | struct unique_leakable_ptr : public std::unique_ptr<T, ceph::nop_delete<T>> {
| ^
/builddir/build/BUILD/ceph-16.2.7/src/include/rados/buffer.h:98:52: error: expected '{' before '<' token
...
Related issues
History
#1 Updated by Kaleb KEITHLEY almost 2 years ago
My hack fix for the above is:
--- ceph-16.2.7/src/include/buffer.h.orig 2022-01-17 12:17:19.193356237 -0500
+++ ceph-16.2.7/src/include/buffer.h 2022-01-17 12:17:58.599639592 -0500@ -38,6 +38,7
@
# include <sys/mman.h>
#endif
+#include <memory>
#include <iosfwd>
#include <iomanip>
#include <list>
#2 Updated by Kaleb KEITHLEY almost 2 years ago
And the next error is:
...
/usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DCEPH_DATADIR=\"/usr/share/ceph\" -DCEPH_LIBDIR=\"/usr/lib64\" -DCEPH_PKGLIBDIR=\"/usr/lib64/ceph\" -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIC -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/common/CMakeFiles/common-common-objs.dir/LogEntry.cc.o -MF src/common/CMakeFiles/common-common-objs.dir/LogEntry.cc.o.d -o src/common/CMakeFiles/common-common-objs.dir/LogEntry.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.cc
/builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.cc: In function 'std::string clog_type_to_string(clog_type)':
/builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.cc:186:14: error: use of deleted function 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::basic_string(std::nullptr_t) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::nullptr_t = std::nullptr_t]'
186 | return 0;
| ^
In file included from /usr/include/c++/12/string:53,
from /usr/include/c++/12/bits/locale_classes.h:40,
from /usr/include/c++/12/bits/ios_base.h:41,
from /usr/include/c++/12/streambuf:41,
from /usr/include/c++/12/bits/streambuf_iterator.h:35,
from /usr/include/c++/12/iterator:66,
from /usr/include/boost/algorithm/string/predicate.hpp:14,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.cc:5:
/usr/include/c++/12/bits/basic_string.h:732:7: note: declared here
732 | basic_string(nullptr_t) = delete;
| ^~~~~~~~~~
#3 Updated by Kaleb KEITHLEY almost 2 years ago
and my hack fix for that is:
--- ceph-16.2.7/src/common/LogEntry.cc.orig 2022-01-17 13:52:10.799134159 0500 return 0;
++ ceph-16.2.7/src/common/LogEntry.cc 2022-01-17 13:52:47.244469274 -0500@ -183,7 +183,7
@
return "crit";
default:
ceph_abort();
return "";
}
}
#4 Updated by Kaleb KEITHLEY almost 2 years ago
and the next error is:
/usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DCEPH_DATADIR=\"/usr/share/ceph\" -DCEPH_LIBDIR=\"/usr/lib64\" -DCEPH_PKGLIBDIR=\"/usr/lib64/ceph\" -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIC -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/common/CMakeFiles/common-common-objs.dir/LogClient.cc.o -MF src/common/CMakeFiles/common-common-objs.dir/LogClient.cc.o.d -o src/common/CMakeFiles/common-common-objs.dir/LogClient.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc
In file included from /builddir/build/BUILD/ceph-16.2.7/src/mon/Session.h:22,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/PaxosServiceMessage.h:7,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/MLog.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:17:
/builddir/build/BUILD/ceph-16.2.7/src/include/xlist.h:162:24: warning: 'template<class _Category, class _Tp, class _Distance, class _Pointer, class _Reference> struct std::iterator' is deprecated [-Wdeprecated-declarations]
162 | class iterator: std::iterator<std::forward_iterator_tag, T> {
| ^~~~~~
In file included from /usr/include/c++/12/bits/stl_algobase.h:65,
from /usr/include/c++/12/bits/specfun.h:45,
from /usr/include/c++/12/cmath:1935,
from /usr/include/c++/12/math.h:36,
from /builddir/build/BUILD/ceph-16.2.7/src/include/utime.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:15:
/usr/include/c++/12/bits/stl_iterator_base_types.h:127:34: note: declared here
127 | struct _GLIBCXX17_DEPRECATED iterator
| ^~~~~~
In file included from /builddir/build/BUILD/ceph-16.2.7/src/mon/Session.h:22,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/PaxosServiceMessage.h:7,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/MLog.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:17:
/builddir/build/BUILD/ceph-16.2.7/src/include/xlist.h:186:30: warning: 'template<class _Category, class _Tp, class _Distance, class _Pointer, class _Reference> struct std::iterator' is deprecated [-Wdeprecated-declarations]
186 | class const_iterator: std::iterator<std::forward_iterator_tag, T> {
| ^~~~~~
In file included from /usr/include/c++/12/bits/stl_algobase.h:65,
from /usr/include/c++/12/bits/specfun.h:45,
from /usr/include/c++/12/cmath:1935,
from /usr/include/c++/12/math.h:36,
from /builddir/build/BUILD/ceph-16.2.7/src/include/utime.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:15:
/usr/include/c++/12/bits/stl_iterator_base_types.h:127:34: note: declared here
127 | struct _GLIBCXX17_DEPRECATED iterator
| ^~~~~~
In file included from /builddir/build/BUILD/ceph-16.2.7/src/librados/ListObjectImpl.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h:51,
from /builddir/build/BUILD/ceph-16.2.7/src/osd/OSDMap.h:38,
from /builddir/build/BUILD/ceph-16.2.7/src/mon/Session.h:29,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/PaxosServiceMessage.h:7,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/MLog.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:17:
/builddir/build/BUILD/ceph-16.2.7/src/include/rados/librados.hpp:107:54: warning: 'template<class _Category, class _Tp, class _Distance, class _Pointer, class _Reference> struct std::iterator' is deprecated [-Wdeprecated-declarations]
107 | class CEPH_RADOS_API NObjectIterator : public std::iterator <std::forward_iterator_tag, ListObject> {
| ^~~~~~
In file included from /usr/include/c++/12/bits/stl_algobase.h:65,
from /usr/include/c++/12/bits/specfun.h:45,
from /usr/include/c++/12/cmath:1935,
from /usr/include/c++/12/math.h:36,
from /builddir/build/BUILD/ceph-16.2.7/src/include/utime.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogEntry.h:18,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:15:
/usr/include/c++/12/bits/stl_iterator_base_types.h:127:34: note: declared here
127 | struct _GLIBCXX17_DEPRECATED iterator
| ^~~~~~
In file included from /builddir/build/BUILD/ceph-16.2.7/src/include/Context.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/msg/Message.h:24,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/PaxosServiceMessage.h:6,
from /builddir/build/BUILD/ceph-16.2.7/src/messages/MLog.h:19,
from /builddir/build/BUILD/ceph-16.2.7/src/common/LogClient.cc:17:
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h: In lambda function:
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:185:56: error: call to non-'constexpr' function 'ceph::dout::dynamic_marker_t<T> ceph::dout::need_dynamic(T&&) [with T = unsigned int]'
185 | dout_impl(pdpp->get_cct(), ceph::dout::need_dynamic(pdpp->get_subsys()), v) \
| ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:156:58: note: in definition of macro 'dout_impl'
156 | return (cctX->_conf->subsys.template should_gather<sub, v>()); \
| ^~~
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h:3570:3: note: in expansion of macro 'ldpp_dout'
3570 | ldpp_dout(dpp, 10) << "build_prior all_probe " << all_probe << dendl;
| ^~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:106:21: note: 'ceph::dout::dynamic_marker_t<T> ceph::dout::need_dynamic(T&&) [with T = unsigned int]' declared here
106 | dynamic_marker_t<T> need_dynamic(T&& t) {
| ^~~~~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h: In lambda function:
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:185:56: error: call to non-'constexpr' function 'ceph::dout::dynamic_marker_t<T> ceph::dout::need_dynamic(T&&) [with T = unsigned int]'
185 | dout_impl(pdpp->get_cct(), ceph::dout::need_dynamic(pdpp->get_subsys()), v) \
| ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:156:58: note: in definition of macro 'dout_impl'
156 | return (cctX->_conf->subsys.template should_gather<sub, v>()); \
| ^~~
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h:3589:7: note: in expansion of macro 'ldpp_dout'
3589 | ldpp_dout(dpp, 10) << "build_prior maybe_rw interval:" << start
| ^~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:106:21: note: 'ceph::dout::dynamic_marker_t<T> ceph::dout::need_dynamic(T&&) [with T = unsigned int]' declared here
106 | dynamic_marker_t<T> need_dynamic(T&& t) {
| ^~~~~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h: In lambda function:
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:185:56: error: call to non-'constexpr' function 'ceph::dout::dynamic_marker_t<T> ceph::dout::need_dynamic(T&&) [with T = unsigned int]'
185 | dout_impl(pdpp->get_cct(), ceph::dout::need_dynamic(pdpp->get_subsys()), v) \
| ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
/builddir/build/BUILD/ceph-16.2.7/src/common/dout.h:156:58: note: in definition of macro 'dout_impl'
156 | return (cctX->_conf->subsys.template should_gather<sub, v>()); \
| ^~~
/builddir/build/BUILD/ceph-16.2.7/src/osd/osd_types.h:3610:11: note: in expansion of macro 'ldpp_dout'
3610 | ldpp_dout(dpp, 10) << "build_prior prior osd." << so.osd
#5 Updated by Nathan Cutler almost 2 years ago
In Tumbleweed we are getting:
[ 100s] [ 11%] Building CXX object src/erasure-code/jerasure/CMakeFiles/jerasure_objs.dir/jerasure_init.cc.o [ 101s] In file included from /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/include/rados/rados_types.hpp:10, [ 101s] from /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/librados/snap_set_diff.h:8, [ 101s] from /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/librados/snap_set_diff.cc:6: [ 101s] /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/include/rados/buffer.h:98:52: error: expected template-name before '<' token [ 101s] 98 | struct unique_leakable_ptr : public std::unique_ptr<T, ceph::nop_delete<T>> { [ 101s] | ^ [ 101s] /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/include/rados/buffer.h:98:52: error: expected '{' before '<' token [ 101s] /home/abuild/rpmbuild/BUILD/ceph-16.2.6-463-g22e7612f9ad/src/include/rados/buffer.h:374:17: error: 'unique_ptr' in namespace 'std' does not name a template type [ 101s] 374 | static std::unique_ptr<ptr_node, disposer> [ 101s] | ^~~~~~~~~~
#6 Updated by Kaleb KEITHLEY almost 2 years ago
- Subject changed from rados: 16.2.7 gcc-12 compile error in librados/snap_set_diff.cc to rados: 16.2.7 multiple gcc-12 compile errors
#8 Updated by Kaleb KEITHLEY almost 2 years ago
next:
[1036/2059] /usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DGTEST_LINKED_AS_SHARED_LIBRARY=1 -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -I/builddir/build/BUILD/ceph-16.2.7/src/spawn/include -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIE -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o -MF src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o.d -o src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/test/librados/tier_cxx.cc
FAILED: src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o
/usr/bin/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DGTEST_LINKED_AS_SHARED_LIBRARY=1 -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -I/builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/src/include -I/builddir/build/BUILD/ceph-16.2.7/src -I/builddir/build/BUILD/ceph-16.2.7/src/spawn/include -isystem /builddir/build/BUILD/ceph-16.2.7/build/redhat-linux-build/include -isystem /builddir/build/BUILD/ceph-16.2.7/src/xxHash -isystem /builddir/build/BUILD/ceph-16.2.7/src/rapidjson/include -O2 -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -O2 -g -DNDEBUG -fPIE -U_FORTIFY_SOURCE -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -std=c++17 -MD -MT src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o -MF src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o.d -o src/test/librados/CMakeFiles/ceph_test_rados_api_tier_pp.dir/tier_cxx.cc.o -c /builddir/build/BUILD/ceph-16.2.7/src/test/librados/tier_cxx.cc
...
/builddir/build/BUILD/ceph-16.2.7/src/test/librados/tier_cxx.cc: At global scope:
/builddir/build/BUILD/ceph-16.2.7/src/test/librados/tier_cxx.cc:117:54: error: use of deleted function 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::basic_string(std::nullptr_t) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::nullptr_t = std::nullptr_t]'
117 | std::string fp_algo = NULL)
| ^
In file included from /usr/include/c++/12/string:53,
from /usr/include/c++/12/bits/locale_classes.h:40,
from /usr/include/c++/12/bits/ios_base.h:41,
from /usr/include/c++/12/ios:42,
from /usr/include/c++/12/ostream:38,
from /usr/include/gtest/gtest.h:58,
from /builddir/build/BUILD/ceph-16.2.7/src/test/librados/tier_cxx.cc:3:
/usr/include/c++/12/bits/basic_string.h:732:7: note: declared here
732 | basic_string(nullptr_t) = delete;
| ^~~~~~~~~~
#9 Updated by Radoslaw Zarzynski almost 2 years ago
- Status changed from New to Fix Under Review
- Assignee set to Radoslaw Zarzynski
#10 Updated by Neha Ojha almost 2 years ago
- Pull request ID set to 44670
#11 Updated by Yuri Weinstein almost 2 years ago
#12 Updated by Neha Ojha almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
- Backport set to pacific,quincy
#13 Updated by Backport Bot almost 2 years ago
- Copied to Backport #54275: quincy: rados: 16.2.7 multiple gcc-12 compile errors added
#14 Updated by Backport Bot almost 2 years ago
- Copied to Backport #54276: pacific: rados: 16.2.7 multiple gcc-12 compile errors added
#15 Updated by Nathan Cutler over 1 year ago
7c381ba985bd1398ef7d145cc00fae9d0db510e3 is also needed to fix the GCC 12 FTBFS
pacific cherry-pick: https://github.com/ceph/ceph/pull/45642
#16 Updated by Ilya Dryomov over 1 year ago
- Target version deleted (
v16.2.8)
#17 Updated by Tim Serong over 1 year ago
Nathan Cutler wrote:
7c381ba985bd1398ef7d145cc00fae9d0db510e3 is also needed to fix the GCC 12 FTBFS
pacific cherry-pick: https://github.com/ceph/ceph/pull/45642
I've moved that to https://github.com/ceph/ceph/pull/47295 so I could get it rebased on the latest Pacific
#18 Updated by Backport Bot over 1 year ago
- Tags set to backport_processed